--- a/signup/signup.css
+++ b/signup/signup.css
@@ -15,9 +15,9 @@ body {
 form {
   display: flex;
   flex-direction: column;
-  padding: 1rem;
-  gap: 0.5rem;
-  font-size: 2rem;
+  padding: 0.5rem 2rem;
+  /* gap: 0.5rem; */
+  font-size: 1rem;
   background: transparent;
   border: 1px solid lightslategray;
 }
@@ -56,7 +56,9 @@ label {
 #AuthBtn {
   width: 50%;
   min-width: 100px;
-  padding: 0.5rem;
+
+  margin-top: 10px;
+  padding: 5px;
   align-self: center;
   cursor: pointer;
   font-weight: 600;
@@ -64,7 +66,7 @@ label {
 
 button:hover {
   background-color: #1c1c1c;
-  color: #f7f7ff;
+  color: cadetblue;
   border: transparent;
 
   -webkit-box-shadow: 0px 0px 102px 15px rgba(46, 248, 255, 0.53);
@@ -85,4 +87,27 @@ input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
   transition: background-color 5000s;
   -webkit-text-fill-color: #fff !important;
+}
+
+form p {
+  text-align: center;
+  margin: 10px auto;
+  /* background-color: #f7f7ff; */
+  color: wheat;
+}
+
+.hidden {
+  display: none;
+}
+
+.error {
+  background-color: yellow;
+  color: red;
+}
+
+a {
+  text-decoration: none;
+  color: #f7f7ff;
+  background-color: rgba(0, 255, 255, 0.102);
+  /* opacity: 0.5; */
 }
