created Login Frontend

--- a/login/login.css
+++ b/login/login.css
@@ -36,6 +36,7 @@ label {
   text-align: center;
   margin-top: 0.5rem;
   color: #f7f7ff;
+  font-size: 1.5rem;
   /* font-weight: 600; */
 }
 .auth-heading {
