--- a/signup/signup.css
+++ b/signup/signup.css
@@ -35,6 +35,7 @@ input {
 label {
   text-align: center;
   margin-top: 0.5rem;
+  font-size: 1.5rem;
   color: #f7f7ff;
   /* font-weight: 600; */
 }
