--- a/login/login.css
+++ b/login/login.css
@@ -58,11 +58,11 @@ label {
   width: 50%;
   min-width: 100px;
 
-  margin-top: 10px;
   padding: 5px;
   align-self: center;
   cursor: pointer;
   font-weight: 600;
+  margin: 5px 0;
 }
 
 button:hover {
@@ -92,7 +92,7 @@ input:-webkit-autofill:active {
 
 form p {
   text-align: center;
-  margin: 10px auto;
+  margin: 5px auto;
   /* background-color: #f7f7ff; */
   color: wheat;
 }
