--- a/signup/signup.css
+++ b/signup/signup.css
@@ -66,13 +66,16 @@ label {
 }
 
 button:hover {
-  background-color: #1c1c1c;
-  color: cadetblue;
   border: transparent;
 
   -webkit-box-shadow: 0px 0px 102px 15px rgba(46, 248, 255, 0.53);
   -moz-box-shadow: 0px 0px 102px 15px rgba(46, 248, 255, 0.53);
   box-shadow: 0px 0px 102px 15px rgba(46, 248, 255, 0.53);
+}
+
+button:active {
+  background-color: #1c1c1c;
+  color: cadetblue;
 }
 
 input :active,
@@ -102,8 +105,8 @@ form p {
 }
 
 .error {
-  background-color: yellow;
-  color: red;
+  background-color: rgba(255, 26, 18, 0.411);
+  color: yellow;
 }
 
 a {
