--- a/chatApp/chatApp.css
+++ b/chatApp/chatApp.css
@@ -4,46 +4,36 @@
 }
 
 body {
-  display: flex;
-  flex-direction: column;
   height: 100vh;
-  /* overflow: none; */
-  /* justify-content: center; */
-  align-items: center;
+
+  padding: 1ren;
+  display: flex;
 
   background-color: #1c1c1c;
   color: white;
 }
 
 .chats {
-  padding: 0.5rem;
-  /* position: fixed; */
-  margin-top: 0.2rem;
+  margin: 1rem auto;
+  text-align: center;
+}
+
+.controls {
+  width: 40vw;
+  /* padding: 0.5rem; */
+
+  border-right: 1px solid rgb(75, 75, 75);
 }
 
 .chatsWrapper {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  width: 70vw;
-  height: 80vh;
-  min-width: 275px;
-
-  padding: 0 0.5rem;
-  /* background-color: aquamarine; */
-  border: 1px solid whitesmoke;
-
-  /* position: fixed; */
+  max-height: 100vh;
+  width: 60vw;
+  flex: 0.7;
+  margin: auto 1rem;
 }
 
-/* .userNameWrap > h2 {
-  padding: 0.5rem;
-  margin-left: 0.5rem;
-  text-decoration: white solid underline;
-} */
-
 .chatcontainer {
-  height: 100%;
+  height: 70vh;
   background-color: #1c1c1c;
   display: flex;
   flex-direction: column;
@@ -115,7 +105,7 @@ body {
 .msg-writing {
   display: flex;
   margin: 0.5rem;
-  width: 70vw;
+  width: 60vw;
 }
 
 #userMsg {
@@ -135,7 +125,8 @@ body {
   margin: 0.5rem;
 }
 
-#sendMsg {
+#sendMsg,
+#adminOptionsBtn {
   padding: 0.5rem 1rem;
   font-size: 1.2rem;
   background-color: transparent;
@@ -148,7 +139,8 @@ body {
   box-shadow: 0px 0px 5px 5px rgba(46, 255, 252, 0.2);
 }
 
-#sendMsg:active {
+#sendMsg:active,
+#adminOptionsBtn:active {
   background-color: aqua;
   color: black;
   font-weight: 600;
@@ -157,4 +149,35 @@ body {
   -webkit-box-shadow: 0px 0px 5px 5px rgba(46, 255, 252, 0.2);
   -moz-box-shadow: 0px 0px 5px 5px rgba(46, 255, 252, 0.2);
   box-shadow: 0px 0px 5px 5px rgba(46, 255, 252, 0.2);
+}
+
+#group-list {
+  height: 70vh;
+
+  background-color: black;
+  padding: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: flex-start;
+
+  gap: 0.5rem;
+
+  overflow-y: scroll;
+}
+
+.group {
+  padding: 0.2rem 0.5rem;
+  border: 1px dotted white;
+  display: flex;
+  align-items: center;
+  width: 80%;
+
+  justify-content: space-between;
+}
+
+#adminOptionsBtn {
+  display: block;
+
+  margin: 0.5rem auto;
 }
