changed folder file structure

--- a/views/chatApp.html
+++ b/views/chatApp.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>app</title>
 
-    <link rel="stylesheet" href="./chatApp.css" />
+    <link rel="stylesheet" href="css/chatApp.css" />
   </head>
   <body>
     <!-- controls -->
@@ -126,5 +126,5 @@
     referrerpolicy="no-referrer"
   ></script>
 
-  <script src="./chatApp.js"></script>
+  <script src="js/chatApp.js"></script>
 </html>
