--- a/views/admin.html
+++ b/views/admin.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin</title>
-    <link rel="stylesheet" href="./admin.css" />
+    <link rel="stylesheet" href="css/admin.css" />
   </head>
   <body>
     <div class="container">
@@ -64,5 +64,5 @@
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   ></script>
-  <script src="./admin.js"></script>
+  <script src="js/admin.js"></script>
 </html>
