--- a/views/admin.html
+++ b/views/admin.html
@@ -55,7 +55,7 @@
       </form>
 
       <!-- go back  -->
-      <button><a href="../chatApp/chatApp.html">Go back</a></button>
+      <button><a href="/chatApp">Go back</a></button>
     </div>
   </body>
   <script
