--- a/views/chatApp.html
+++ b/views/chatApp.html
@@ -19,10 +19,10 @@
         
 
         <!-- temp start -->
-        <div class="group" onclick="fetchGroupMsg(id)">
+        <!-- <div class="group" onclick="fetchGroupMsg(id)">
           <h3>gropu name</h3>
           <p class="groupId">0012</p>
-        </div>
+        </div> -->
         <div class="group">
           <h3>gropu name</h3>
           <p class="groupId">0012</p>
